--- a/index.html
+++ b/index.html
@@ -1,45 +1,140 @@
 <!doctype html>
 <!-- © Evolution Development 2023 -->
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Evolution Development</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-	</head>
-	<body>
-		<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="#">
-					<img src="https://upload.wikimedia.org/wikipedia/commons/d/df/IPhone_icon_aqua.png" alt="EvoDev" width="30" height="30">
-					Evolution Development
-				</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Pricing</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Our Work</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Contact Us</a>
-						</li>
-					</ul>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Evolution Development</title>
+	<link href="./assest/css/style.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+</head>
+
+<body>
+	<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/d/df/IPhone_icon_aqua.png" alt="EvoDev"
+					width="30" height="30">
+				Evolution Development
+			</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Pricing</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Our Work</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact Us</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+	<div>
+		<img src="./assest/img/Tester.jpg" style="width: 100%; max-width: 100%;" height="1220px" alt="Your Alt Text">
+		<!-- Circular text container -->
+		<div class="circle-text">
+			<p>Text inside the circle</p>
+		</div>
+	</div>
+
+	<div class="container">
+		<div class="container text-center my-3">
+			<h2 class="font-weight-light">----PLACEHOLDER----</h2>
+			<div class="row mx-auto my-auto justify-content-center">
+				<div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
+					<div class="carousel-inner" role="listbox">
+						<div class="carousel-item active">
+							<div class="col-md-3">
+								<div class="card">
+									<div class="card-img">
+										<img src="./assest/img/node.png" class="img-fluid">
+									</div>
+									<div class="card-img-overlay"></div>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div class="col-md-3">
+								<div class="card">
+									<div class="card-img">
+										<img src="./assest/img/JavaScript.png" class="img-fluid">
+									</div>
+									<div class="card-img-overlay"></div>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div class="col-md-3">
+								<div class="card">
+									<div class="card-img">
+										<img src="./assest/img/mysql.png" class="img-fluid">
+									</div>
+									<div class="card-img-overlay"></div>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div class="col-md-3">
+								<div class="card">
+									<div class="card-img">
+										<img src="./assest/img/Php.jpeg" class="img-fluid">
+									</div>
+									<div class="card-img-overlay"></div>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div class="col-md-3">
+								<div class="card">
+									<div class="card-img">
+										<img src="./assest/img/html5.jpeg" class="img-fluid">
+									</div>
+									<div class="card-img-overlay"></div>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div class="col-md-3">
+								<div class="card">
+									<div class="card-img">
+										<img src="./assest/img/css.png" class="img-fluid">
+									</div>
+									<div class="card-img-overlay"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<a class="carousel-control-prev bg-transparent w-aut" href="#recipeCarousel" role="button"
+						data-bs-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next bg-transparent w-aut" href="#recipeCarousel" role="button"
+						data-bs-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					</a>
 				</div>
 			</div>
-		</nav>
-		
-		<div class="container">
-			
+			<h5 class="mt-2 fw-light"></h5>
 		</div>
-		
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-	</body>
+	</div>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+		crossorigin="anonymous"></script>
+</body>
+
 </html>
