--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Evolution Development</title>
-	<link href="./assest/css/style.css" rel="stylesheet">
+	<link href="./assets/css/style.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
@@ -44,7 +44,7 @@
 	</nav>
 
 	<div>
-		<img src="./assest/img/Tester.jpg" style="width: 100%; max-width: 100%;" height="1220px" alt="Your Alt Text">
+		<img src="./assets/img/Tester.jpg" style="width: 100%; max-width: 100%;" height="1220px" alt="Your Alt Text">
 		<!-- Circular text container -->
 		<div class="circle-text">
 			<p>Text inside the circle</p>
@@ -61,7 +61,7 @@
 							<div class="col-md-3">
 								<div class="card">
 									<div class="card-img">
-										<img src="./assest/img/node.png" class="img-fluid">
+										<img src="./assets/img/node.png" class="img-fluid">
 									</div>
 									<div class="card-img-overlay"></div>
 								</div>
@@ -71,7 +71,7 @@
 							<div class="col-md-3">
 								<div class="card">
 									<div class="card-img">
-										<img src="./assest/img/JavaScript.png" class="img-fluid">
+										<img src="./assets/img/JavaScript.png" class="img-fluid">
 									</div>
 									<div class="card-img-overlay"></div>
 								</div>
@@ -81,7 +81,7 @@
 							<div class="col-md-3">
 								<div class="card">
 									<div class="card-img">
-										<img src="./assest/img/mysql.png" class="img-fluid">
+										<img src="./assets/img/mysql.png" class="img-fluid">
 									</div>
 									<div class="card-img-overlay"></div>
 								</div>
@@ -91,7 +91,7 @@
 							<div class="col-md-3">
 								<div class="card">
 									<div class="card-img">
-										<img src="./assest/img/Php.jpeg" class="img-fluid">
+										<img src="./assets/img/Php.jpeg" class="img-fluid">
 									</div>
 									<div class="card-img-overlay"></div>
 								</div>
@@ -101,7 +101,7 @@
 							<div class="col-md-3">
 								<div class="card">
 									<div class="card-img">
-										<img src="./assest/img/html5.jpeg" class="img-fluid">
+										<img src="./assets/img/html5.jpeg" class="img-fluid">
 									</div>
 									<div class="card-img-overlay"></div>
 								</div>
@@ -111,7 +111,7 @@
 							<div class="col-md-3">
 								<div class="card">
 									<div class="card-img">
-										<img src="./assest/img/css.png" class="img-fluid">
+										<img src="./assets/img/css.png" class="img-fluid">
 									</div>
 									<div class="card-img-overlay"></div>
 								</div>
