Added and changed icons

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 	<div class="container">
 		<div class="container text-center my-3">
-			<h2 class="font-weight-light">----PLACEHOLDER----</h2>
+			<h2 class="font-weight-light"></h2>
 			<div class="row mx-auto my-auto justify-content-center">
 				<div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
 					<div class="carousel-inner" role="listbox">
@@ -61,7 +61,7 @@
 							<div class="col-md-3">
 								<div class="card">
 									<div class="card-img">
-										<img src="./assets/img/node.png" class="img-fluid">
+										<img src="./assets/img/langIcons/html5.png" class="img-fluid">
 									</div>
 									<div class="card-img-overlay"></div>
 								</div>
@@ -71,7 +71,7 @@
 							<div class="col-md-3">
 								<div class="card">
 									<div class="card-img">
-										<img src="./assets/img/JavaScript.png" class="img-fluid">
+										<img src="./assets/img/langIcons/css.png" class="img-fluid">
 									</div>
 									<div class="card-img-overlay"></div>
 								</div>
@@ -81,7 +81,7 @@
 							<div class="col-md-3">
 								<div class="card">
 									<div class="card-img">
-										<img src="./assets/img/mysql.png" class="img-fluid">
+										<img src="./assets/img/langIcons/js.png" class="img-fluid">
 									</div>
 									<div class="card-img-overlay"></div>
 								</div>
@@ -91,7 +91,7 @@
 							<div class="col-md-3">
 								<div class="card">
 									<div class="card-img">
-										<img src="./assets/img/Php.jpeg" class="img-fluid">
+										<img src="./assets/img/langIcons/bootstrap.png" class="img-fluid">
 									</div>
 									<div class="card-img-overlay"></div>
 								</div>
@@ -101,7 +101,7 @@
 							<div class="col-md-3">
 								<div class="card">
 									<div class="card-img">
-										<img src="./assets/img/html5.jpeg" class="img-fluid">
+										<img src="./assets/img/langIcons/php.png" class="img-fluid">
 									</div>
 									<div class="card-img-overlay"></div>
 								</div>
@@ -111,12 +111,53 @@
 							<div class="col-md-3">
 								<div class="card">
 									<div class="card-img">
-										<img src="./assets/img/css.png" class="img-fluid">
+										<img src="./assets/img/langIcons/mysql.png" class="img-fluid">
 									</div>
 									<div class="card-img-overlay"></div>
 								</div>
 							</div>
 						</div>
+						<div class="carousel-item">
+							<div class="col-md-3">
+								<div class="card">
+									<div class="card-img">
+										<img src="./assets/img/langIcons/nodejs.png" class="img-fluid">
+									</div>
+									<div class="card-img-overlay"></div>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div class="col-md-3">
+								<div class="card">
+									<div class="card-img">
+										<img src="./assets/img/langIcons/reactjs.png" class="img-fluid">
+									</div>
+									<div class="card-img-overlay"></div>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div class="col-md-3">
+								<div class="card">
+									<div class="card-img">
+										<img src="./assets/img/langIcons/vuejs.png" class="img-fluid">
+									</div>
+									<div class="card-img-overlay"></div>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div class="col-md-3">
+								<div class="card">
+									<div class="card-img">
+										<img src="./assets/img/langIcons/nuxtjs.png" class="img-fluid">
+									</div>
+									<div class="card-img-overlay"></div>
+								</div>
+							</div>
+						</div>
+						
 					</div>
 					<a class="carousel-control-prev bg-transparent w-aut" href="#recipeCarousel" role="button"
 						data-bs-slide="prev">
