--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Evolution Development</title>
+	
 	<link href="./assets/css/style.css" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/7f455ee949.js" crossorigin="anonymous"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
@@ -44,138 +46,115 @@
 	</nav>
 
 	<div>
-		<img src="./assets/img/Tester.jpg" style="width: 100%; max-width: 100%;" height="1220px" alt="Your Alt Text">
+		<img src="./assets/img/Tester.jpg" style="width: 100%; max-width: 100%;" height="800px" alt="Your Alt Text" draggable="false">
 		<!-- Circular text container -->
 		<div class="circle-text">
-			<p>Text inside the circle</p>
+			<p>
+				Learn more<br>
+				<i class="fa-regular fa-circle-down"></i>
+			</p>
 		</div>
 	</div>
 
-	<div class="container">
-		<div class="container text-center my-3">
-			<h2 class="font-weight-light"></h2>
-			<div class="row mx-auto my-auto justify-content-center">
-				<div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
-					<div class="carousel-inner" role="listbox">
-						<div class="carousel-item active">
-							<div class="col-md-3">
-								<div class="card">
-									<div class="card-img">
-										<img src="./assets/img/langIcons/html5.png" class="img-fluid">
-									</div>
-									<div class="card-img-overlay"></div>
+	<<div class="container text-center my-3">
+		<div class="row mx-auto my-auto justify-content-center">
+			<div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
+				<div class="carousel-inner" role="listbox">
+					<div class="carousel-item active">
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img">
+									<img src="assets/img/langIcons/html5.png" class="img-fluid">
 								</div>
 							</div>
 						</div>
-						<div class="carousel-item">
-							<div class="col-md-3">
-								<div class="card">
-									<div class="card-img">
-										<img src="./assets/img/langIcons/css.png" class="img-fluid">
-									</div>
-									<div class="card-img-overlay"></div>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="col-md-3">
-								<div class="card">
-									<div class="card-img">
-										<img src="./assets/img/langIcons/js.png" class="img-fluid">
-									</div>
-									<div class="card-img-overlay"></div>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="col-md-3">
-								<div class="card">
-									<div class="card-img">
-										<img src="./assets/img/langIcons/bootstrap.png" class="img-fluid">
-									</div>
-									<div class="card-img-overlay"></div>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="col-md-3">
-								<div class="card">
-									<div class="card-img">
-										<img src="./assets/img/langIcons/php.png" class="img-fluid">
-									</div>
-									<div class="card-img-overlay"></div>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="col-md-3">
-								<div class="card">
-									<div class="card-img">
-										<img src="./assets/img/langIcons/mysql.png" class="img-fluid">
-									</div>
-									<div class="card-img-overlay"></div>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="col-md-3">
-								<div class="card">
-									<div class="card-img">
-										<img src="./assets/img/langIcons/nodejs.png" class="img-fluid">
-									</div>
-									<div class="card-img-overlay"></div>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="col-md-3">
-								<div class="card">
-									<div class="card-img">
-										<img src="./assets/img/langIcons/reactjs.png" class="img-fluid">
-									</div>
-									<div class="card-img-overlay"></div>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="col-md-3">
-								<div class="card">
-									<div class="card-img">
-										<img src="./assets/img/langIcons/vuejs.png" class="img-fluid">
-									</div>
-									<div class="card-img-overlay"></div>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="col-md-3">
-								<div class="card">
-									<div class="card-img">
-										<img src="./assets/img/langIcons/nuxtjs.png" class="img-fluid">
-									</div>
-									<div class="card-img-overlay"></div>
-								</div>
-							</div>
-						</div>
-						
 					</div>
-					<a class="carousel-control-prev bg-transparent w-aut" href="#recipeCarousel" role="button"
-						data-bs-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					</a>
-					<a class="carousel-control-next bg-transparent w-aut" href="#recipeCarousel" role="button"
-						data-bs-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					</a>
+					<div class="carousel-item">
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img">
+									<img src="assets/img/langIcons/css.png" class="img-fluid" width="400px">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img">
+									<img src="assets/img/langIcons/js.png" class="img-fluid">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img">
+									<img src="assets/img/langIcons/php.png" class="img-fluid">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img">
+									<img src="assets/img/langIcons/mysql.png" class="">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img">
+									<img src="assets/img/langIcons/nodejs.png" class="img-fluid">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img">
+									<img src="assets/img/langIcons/reactjs.png" class="img-fluid">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img">
+									<img src="assets/img/langIcons/vuejs.png" class="img-fluid">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img">
+									<img src="assets/img/langIcons/nuxtjs.png" class="img-fluid">
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
+				<a class="carousel-control-prev bg-transparent w-aut" href="#recipeCarousel" role="button" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				</a>
+				<a class="carousel-control-next bg-transparent w-aut" href="#recipeCarousel" role="button" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				</a>
 			</div>
-			<h5 class="mt-2 fw-light"></h5>
-		</div>
+		</div>		
 	</div>
-
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
 		crossorigin="anonymous"></script>
+	<script src="assets/js/carousel.js"></script>
 </body>
 
 </html>
