--- a/index.html
+++ b/index.html
@@ -154,7 +154,24 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
 		crossorigin="anonymous"></script>
-	<script src="assets/js/carousel.js"></script>
+	<!--Script for multi carousel-->
+	<script>
+		let items = document.querySelectorAll('.carousel .carousel-item')
+
+			items.forEach((el) => {
+				const minPerSlide = 4
+				let next = el.nextElementSibling
+				for (var i=1; i<minPerSlide; i++) {
+					if (!next) {
+				// wrap carousel by using first child
+				next = items[0]
+			}
+			let cloneChild = next.cloneNode(true)
+			el.appendChild(cloneChild.children[0])
+			next = next.nextElementSibling
+		}
+	})
+	</script>
 </body>
 
 </html>
