--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Evolution Development</title>
-	
+	<!-- Include CSS and JavaScript resources -->
 	<link href="./assets/css/style.css" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/7f455ee949.js" crossorigin="anonymous"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 
-<body>
+<body> <!-- Navigation Bar -->
 	<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">
@@ -21,11 +21,13 @@
 					width="30" height="30">
 				Evolution Development
 			</a>
+			<!-- Navbar Toggler -->
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
+			<!-- Navbar Links -->
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
@@ -44,9 +46,11 @@
 			</div>
 		</div>
 	</nav>
-
-	<div>
-		<img src="./assets/img/Tester.jpg" style="width: 100%; max-width: 100%;" height="800px" alt="Your Alt Text" draggable="false">
+	<!-- Main Content -->
+	<div class="image-container">
+		<!-- Background Image -->
+		<img src="./assets/img/Tester.jpg" style="width: 100%; max-width: 100%;" height="800px" alt="Your Alt Text"
+			draggable="false">
 		<!-- Circular text container -->
 		<div class="circle-text">
 			<p>
@@ -55,11 +59,12 @@
 			</p>
 		</div>
 	</div>
-
-	<<div class="container text-center my-3">
+	<!-- Carousel Section -->
+	<div class="container text-center my-3">
 		<div class="row mx-auto my-auto justify-content-center">
 			<div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-inner" role="listbox">
+					<!-- Carousel Items (Images) -->
 					<div class="carousel-item active">
 						<div class="col-md-3">
 							<div class="card">
@@ -69,6 +74,7 @@
 							</div>
 						</div>
 					</div>
+					<!-- Carousel Items (Images) -->
 					<div class="carousel-item">
 						<div class="col-md-3">
 							<div class="card">
@@ -78,6 +84,7 @@
 							</div>
 						</div>
 					</div>
+					<!-- Carousel Items (Images) -->
 					<div class="carousel-item">
 						<div class="col-md-3">
 							<div class="card">
@@ -87,6 +94,7 @@
 							</div>
 						</div>
 					</div>
+					<!-- Carousel Items (Images) -->
 					<div class="carousel-item">
 						<div class="col-md-3">
 							<div class="card">
@@ -96,6 +104,7 @@
 							</div>
 						</div>
 					</div>
+					<!-- Carousel Items (Images) -->
 					<div class="carousel-item">
 						<div class="col-md-3">
 							<div class="card">
@@ -105,6 +114,7 @@
 							</div>
 						</div>
 					</div>
+					<!-- Carousel Items (Images) -->
 					<div class="carousel-item">
 						<div class="col-md-3">
 							<div class="card">
@@ -114,6 +124,7 @@
 							</div>
 						</div>
 					</div>
+					<!-- Carousel Items (Images) -->
 					<div class="carousel-item">
 						<div class="col-md-3">
 							<div class="card">
@@ -123,6 +134,7 @@
 							</div>
 						</div>
 					</div>
+					<!-- Carousel Items (Images) -->
 					<div class="carousel-item">
 						<div class="col-md-3">
 							<div class="card">
@@ -132,6 +144,7 @@
 							</div>
 						</div>
 					</div>
+					<!-- Carousel Items (Images) -->
 					<div class="carousel-item">
 						<div class="col-md-3">
 							<div class="card">
@@ -142,20 +155,86 @@
 						</div>
 					</div>
 				</div>
-				<a class="carousel-control-prev bg-transparent w-aut" href="#recipeCarousel" role="button" data-bs-slide="prev">
+				<!-- Carousel Controls -->
+				<a class="carousel-control-prev bg-transparent w-aut" href="#recipeCarousel" role="button"
+					data-bs-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 				</a>
-				<a class="carousel-control-next bg-transparent w-aut" href="#recipeCarousel" role="button" data-bs-slide="next">
+				<!-- Carousel Controls -->
+				<a class="carousel-control-next bg-transparent w-aut" href="#recipeCarousel" role="button"
+					data-bs-slide="next">
 					<span class="carousel-control-next-icon" aria-hidden="true"></span>
 				</a>
 			</div>
-		</div>		
+		</div>
 	</div>
-	
+
+	<h2 style="text-align:center">Pricing</h2>
+	<p style="text-align:center">PlaceHolder</p>
 	<div class="container">
-		Pricing goes here
+		<div class="columns">
+			<ul class="price">
+				<li class="header">Basic</li>
+				<li class="grey">$ 9.99 / year</li>
+				<li>10GB Storage</li>
+				<li>10 Emails</li>
+				<li>10 Domains</li>
+				<li>1GB Bandwidth</li>
+				<li class="grey"><a href="#" class="button">Sign Up</a></li>
+			</ul>
+		</div>
+
+		<div class="columns">
+			<ul class="price">
+				<li class="header" style="background-color:#04AA6D">Pro</li>
+				<li class="grey">$ 24.99 / year</li>
+				<li>25GB Storage</li>
+				<li>25 Emails</li>
+				<li>25 Domains</li>
+				<li>2GB Bandwidth</li>
+				<li class="grey"><a href="#" class="button">Sign Up</a></li>
+			</ul>
+		</div>
+
+		<div class="columns">
+			<ul class="price">
+				<li class="header">Premium</li>
+				<li class="grey">$ 49.99 / year</li>
+				<li>50GB Storage</li>
+				<li>50 Emails</li>
+				<li>50 Domains</li>
+				<li>5GB Bandwidth</li>
+				<li class="grey"><a href="#" class="button">Sign Up</a></li>
+			</ul>
+		</div>
 	</div>
-	
+	<div class="container projects-section">
+		<h2>Our Clients</h2>
+
+		<!-- Project 1 -->
+		<div class="project">
+			<h3>RefreshGaming</h3>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio itaque tempore,
+				consequatur culpa at tempora eaque officia, pariatur nam cumque quibusdam.
+				Ipsam sunt officiis harum molestiae blanditiis voluptatum saepe voluptates?
+			</p>
+			<!-- additional project content here -->
+		</div>
+
+		<!-- Project 2 -->
+		<div class="project">
+			<h3>Project 2</h3>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio itaque tempore,
+				consequatur culpa at tempora eaque officia, pariatur nam cumque quibusdam.
+				Ipsam sunt officiis harum molestiae blanditiis voluptatum saepe voluptates?
+			</p>
+			<!-- additional project content here -->
+		</div>
+
+		<!-- Add more project sections as needed -->
+	</div>
+
+
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
 		crossorigin="anonymous"></script>
@@ -163,19 +242,19 @@
 	<script>
 		let items = document.querySelectorAll('.carousel .carousel-item')
 
-			items.forEach((el) => {
-				const minPerSlide = 4
-				let next = el.nextElementSibling
-				for (var i=1; i<minPerSlide; i++) {
-					if (!next) {
-				// wrap carousel by using first child
-				next = items[0]
+		items.forEach((el) => {
+			const minPerSlide = 4
+			let next = el.nextElementSibling
+			for (var i = 1; i < minPerSlide; i++) {
+				if (!next) {
+					// wrap carousel by using first child
+					next = items[0]
+				}
+				let cloneChild = next.cloneNode(true)
+				el.appendChild(cloneChild.children[0])
+				next = next.nextElementSibling
 			}
-			let cloneChild = next.cloneNode(true)
-			el.appendChild(cloneChild.children[0])
-			next = next.nextElementSibling
-		}
-	})
+		})
 	</script>
 </body>
 
