--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body> <!-- Navigation Bar -->
-	<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
+	<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark" id="navbar">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">
 				<img src="https://upload.wikimedia.org/wikipedia/commons/d/df/IPhone_icon_aqua.png" alt="EvoDev"
@@ -256,6 +256,7 @@
 			}
 		})
 	</script>
+	
 </body>
 
 </html>
