New pricing table

--- a/index.html
+++ b/index.html
@@ -168,48 +168,50 @@
 			</div>
 		</div>
 	</div>
-
-	<h2 style="text-align:center">Pricing</h2>
-	<p style="text-align:center">PlaceHolder</p>
-	<div class="container">
-		<div class="columns">
-			<ul class="price">
-				<li class="header">Basic</li>
-				<li class="grey">$ 9.99 / year</li>
-				<li>10GB Storage</li>
-				<li>10 Emails</li>
-				<li>10 Domains</li>
-				<li>1GB Bandwidth</li>
-				<li class="grey"><a href="#" class="button">Sign Up</a></li>
-			</ul>
-		</div>
-
-		<div class="columns">
-			<ul class="price">
-				<li class="header" style="background-color:#04AA6D">Pro</li>
-				<li class="grey">$ 24.99 / year</li>
-				<li>25GB Storage</li>
-				<li>25 Emails</li>
-				<li>25 Domains</li>
-				<li>2GB Bandwidth</li>
-				<li class="grey"><a href="#" class="button">Sign Up</a></li>
-			</ul>
-		</div>
-
-		<div class="columns">
-			<ul class="price">
-				<li class="header">Premium</li>
-				<li class="grey">$ 49.99 / year</li>
-				<li>50GB Storage</li>
-				<li>50 Emails</li>
-				<li>50 Domains</li>
-				<li>5GB Bandwidth</li>
-				<li class="grey"><a href="#" class="button">Sign Up</a></li>
-			</ul>
+	
+	<h2 style="color:#fff;text-align:center">Pricing</h2>
+	<p style="color:#fff;text-align:center">PlaceHolder</p>
+	<div class="container text-center">
+		<div class="row pricingColumns">
+			<div class="col">
+				<ul class="pricing">
+					<li class="header">Starter</li>
+					<li class="price">$100</li>
+					<li>Hosted for you (FREE)</li>
+					<li>Unlimited Revisions</li>
+					<li>SEO Friendly</li>
+					<li>1 Page limit</li>
+					<li>HTML/CSS/JS</li>
+				</ul>
+			</div>
+			<div class="col">
+				<ul class="pricing">
+					<li class="header">Pro</li>
+					<li class="price">$200</li>
+					<li>Hosted for you ($20/mo.)</li>
+					<li>Unlimited Revisions</li>
+					<li>SEO Friendly</li>
+					<li>3 Pages limit</li>
+					<li>HTML/CSS/JS/PHP</li>
+				</ul>
+			</div>
+			<div class="col">
+				<ul class="pricing">
+					<li class="header">Premium</li>
+					<li class="price">$500</li>
+					<li>Hosted for you ($20/mo.)</li>
+					<li>Unlimited Revisions</li>
+					<li>SEO Friendly</li>
+					<li>10 Pages limit</li>
+					<li>HTML/CSS/JS/PHP/MYSQL/Node.js/React.js</li>
+				</ul>
+			</div>
 		</div>
 	</div>
+	
+	<h2 style="color:#fff;text-align:center">Our Clients</h2>
+	<p style="color:#fff;text-align:center">PlaceHolder</p>
 	<div class="container projects-section">
-		<h2>Our Clients</h2>
 
 		<!-- Project 1 -->
 		<div class="project">
