More updates to carousel and pricing

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 		</div>
 	</div>
 	<!-- Carousel Section -->
-	<div class="container text-center my-3">
-		<div class="row mx-auto my-auto justify-content-center">
+	<div class="carouselContainer text-center my-3">
+		<div class="row mx-auto my-auto">
 			<div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-inner" role="listbox">
 					<!-- Carousel Items (Images) -->
@@ -79,7 +79,7 @@
 						<div class="col-md-3">
 							<div class="card">
 								<div class="card-img">
-									<img src="assets/img/langIcons/css.png" class="img-fluid" width="400px">
+									<img src="assets/img/langIcons/css.png" class="img-fluid">
 								</div>
 							</div>
 						</div>
@@ -109,7 +109,17 @@
 						<div class="col-md-3">
 							<div class="card">
 								<div class="card-img">
-									<img src="assets/img/langIcons/mysql.png" class="">
+									<img src="assets/img/langIcons/mysql.png" class="img-fluid">
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- Carousel Items (Images) -->
+					<div class="carousel-item">
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img">
+									<img src="assets/img/langIcons/bootstrap.png" class="img-fluid">
 								</div>
 							</div>
 						</div>
@@ -170,12 +180,12 @@
 	</div>
 	
 	<h2 style="color:#fff;text-align:center">Pricing</h2>
-	<p style="color:#fff;text-align:center">PlaceHolder</p>
+	<p style="color:#fff;text-align:center">Our pricing options are just for you to get an idea of what we offer and how much it will cost.<br>Please contact us below to get an accurate quote for your website!</p>
 	<div class="container text-center">
 		<div class="row pricingColumns">
 			<div class="col">
 				<ul class="pricing">
-					<li class="header">Starter</li>
+					<li class="header">Basic</li>
 					<li class="price">$100</li>
 					<li>Hosted for you (FREE)</li>
 					<li>Unlimited Revisions</li>
@@ -207,7 +217,13 @@
 				</ul>
 			</div>
 		</div>
+		<div class="p-3 pricingContact">
+			<h3 style="color:#fff">Contact us for an accurate quote!</h3>
+			<button type="button" class="btn btn-secondary">Contact now</button>
+		</div>
+		<br>
 	</div>
+	<br>
 	
 	<h2 style="color:#fff;text-align:center">Our Clients</h2>
 	<p style="color:#fff;text-align:center">PlaceHolder</p>
