--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 </head>
 
-<body> <!-- Navigation Bar -->
+<body> 
+	<!-- Navigation Bar -->
 	<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark" id="navbar">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">
@@ -50,7 +51,7 @@
 	<!-- Main Content -->
 	<div class="image-container">
 		<!-- Background Image -->
-		<img src="./assets/img/Tester.jpg" style="width: 100%; max-width: 100%;" height="800px" alt="Your Alt Text"
+		<img src="./assets/img/Tester.jpg" style="width: 100%; max-width: 100%;" height="1225px" alt="Your Alt Text"
 			draggable="false">
 		<!-- Circular text container -->
 		<a href="#pricing" class="circle-text">
