--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<!-- Main Content -->
 	<div class="image-container">
 		<!-- Background Image -->
-		<img src="./assets/img/Tester.jpg" style="width: 100%; max-width: 100%;" height="1225px" alt="Your Alt Text"
+		<img src="./assets/img/Tester2.jpg" style="width: 100%; max-width: 100%;" height="1225px" alt="Your Alt Text"
 			draggable="false">
 		<!-- Circular text container -->
 		<a href="#pricing" class="circle-text">
