--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Evolution Development</title>
 	<!-- Include CSS and JavaScript resources -->
-	<link href="./assets/css/style.css?2" rel="stylesheet">
+	<link href="./assets/css/style.css?3" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/7f455ee949.js" crossorigin="anonymous"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -234,7 +234,7 @@
 		<!-- Contact section -->
 		<div class="p-3 pricingContact rounded">
 			<h3 style="color:#fff">Contact us for an accurate quote!</h3>
-			<button type="button" class="btn btn-secondary">Contact now</button>
+			<button type="button" class="btn btn-secondary">Contact now
 		</div>
 		<br>
 	</div>
@@ -255,13 +255,6 @@
 					<iframe src="https://chase88.net/" width="40%" height="820px" class="rounded"></iframe>
 					
 					<!-- additional project content here -->
-		
-					<!-- Separate container for the overlapping box, centered on the screen -->
-					<div class="position-absolute top-50 start-50 translate-middle p-3 rounded" 
-					style="width: 950px; height: 300px; margin-top: 6%; background-color: rgb(79, 83, 87); ">
-						<h4>Overlapping Box</h4>
-						<p>This is some overlapping text.</p>
-					</div>
 				</div>
 			</div>
 		</div>
