fixed caousel sizing and spacing

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<!-- Carousel Section -->
 	<div class="carouselContainer text-center my-3">
 		<div class="row mx-auto my-auto">
-			<div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
+			<div style="height: 150px;" id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-inner" role="listbox">
 					<!-- Carousel Items (Images) -->
 					<div class="carousel-item active">
