--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	<script src="https://kit.fontawesome.com/7f455ee949.js" crossorigin="anonymous"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -43,7 +42,8 @@
 						<a class="nav-link cta-button" href="#clients">Our Work</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link cta-button" data-bs-toggle="modal" data-bs-target="#contactModal">Contact Us</a>
+						<a class="nav-link cta-button" data-bs-toggle="modal" data-bs-target="#contactModal">Contact
+							Us</a>
 					</li>
 				</ul>
 			</div>
@@ -185,7 +185,7 @@
 	<h2 style="color:#fff;text-align:center" id="pricing">Pricing</h2>
 	<p style="color:#fff;text-align:center">Our pricing options are just for you to get an idea of what we offer and how
 		much it will cost.<br>Please contact us below to get an accurate quote for your website!</p>
-		<!-- Pricing section container -->
+	<!-- Pricing section container -->
 	<div class="container text-center rounded">
 		<!-- Row for pricing columns -->
 		<div class="row pricingColumns" style="padding-top: 2%; padding-bottom: 2%;">
@@ -291,10 +291,10 @@
 					<p style="font-weight: bold;">description of your project goes here.</p>
 					<a href="https://chase88.net/" target="_blank" class="cta-button">View Project</a>
 				</div>
-	
+
 				<!-- Iframe Container -->
 				<div class="iframe-container">
-					<iframe src="https://chase88.net/" width="100%" height="1200px" class="rounded"></iframe>
+					<iframe src="https://chase88.net/" width="100%" height="1200px" class="rounded">
 				</div>
 			</div>
 		</div>
@@ -311,6 +311,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
 		crossorigin="anonymous"></script>
+
 	<!--Script for multi carousel-->
 	<script>
 		let items = document.querySelectorAll('.carousel .carousel-item')
