--- a/index.html
+++ b/index.html
@@ -17,51 +17,71 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
 		integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
 		crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+   $(document).ready(function() {
+        $(window).scroll(function() {
+            // Calculate the new opacity and margin-top based on the scroll amount
+            const scroll = $(window).scrollTop();
+            const margin = scroll / 3; // Adjust the factor as needed for margin-top
+
+            // Apply the new opacity and margin-top to the parallax text
+            $('#parallax-text').css('margin-top', margin + 'px');
+        });
+    });
+</script>
 </head>
 
 <body>
 	<!-- Navigation Bar -->
-	<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark fixed-top" data-bs-theme="dark" id="navbar"
-		style="border-bottom: solid 1px white;">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="#">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/d/df/IPhone_icon_aqua.png" alt="EvoDev"
-					width="30" height="30">
-				Evolution Development
-			</a>
-			<!-- Navbar Toggler -->
-			<button class="navbar-toggler " type="button" data-bs-toggle="collapse"
-				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-				aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<!-- Navbar Links -->
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item">
-						<a class="nav-link active cta-button" aria-current="page" href="#">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link cta-button" href="#pricing">Pricing</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link cta-button" href="#clients">Our Work</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link cta-button" data-bs-toggle="modal" data-bs-target="#contactModal">Contact
-							Us</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<!-- Main Content -->
-	<div class="image-container">
+	<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark fixed-top fade-in" data-bs-theme="dark" id="navbar"
+    style="border-bottom: solid 1px white;">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/df/IPhone_icon_aqua.png" alt="EvoDev"
+                width="30" height="30">
+            LOGO
+        </a>
+        <!-- Navbar Toggler -->
+        <button class="navbar-toggler " type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Navbar Links -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0"> <!-- Use mx-auto to center the links -->
+                <li class="nav-item">
+                    <a class="nav-link active cta-button" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link cta-button" href="#pricing">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link cta-button" href="#clients">Our Work</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto mb-2 mb-lg-0"> <!-- Use ml-auto to push this ul to the right -->
+                <li class="nav-item">
+                    <a class="nav-link cta-button" data-bs-toggle="modal" data-bs-target="#contactModal">Contact
+                        Us</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+	<!-- Main IMG Content -->
+	<div class="image-container fade-in">
 		<!-- Background Image -->
-		<img src="./assets/img/Tester.jpg" style="width: 100%; max-width: 100%;" height="800px" alt="Your Alt Text"
+		<img src="./assets/img/Tester.jpg" style="width: 100%; max-width: 100%; height: 100%;" alt="Your Alt Text"
 			draggable="false">
+			<div class="centered-text extended-fade-in" id="parallax-text">
+				<p>
+					We Build What You Dream
+				</p>
+			</div>
 		<!-- Circular text container -->
-		<a href="#pricing" class="circle-text">
+		<a href="#pricing" class="circle-text extended-fade-in">
 			<p>
 				Learn more<br>
 				<i class="fa-regular fa-circle-down"></i>
@@ -337,6 +357,7 @@
 			}
 		})
 	</script>
+	
 
 
 </body>
