--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </ul>
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0"> <!-- Use ml-auto to push this ul to the right -->
                 <li class="nav-item">
-                    <a class="nav-link cta-button" data-bs-toggle="modal" data-bs-target="#contactModal">Contact
+                    <a class="nav-link cta-button" href="" data-bs-toggle="modal" data-bs-target="#contactModal">Contact
                         Us</a>
                 </li>
             </ul>
