--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Evolution Development</title>
 	<!-- Include CSS and JavaScript resources -->
-	<link href="./assets/css/style.css?9" rel="stylesheet">
+	<link href="./assets/css/style.css?10" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/7f455ee949.js" crossorigin="anonymous"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -49,7 +49,7 @@
         </button>
         <!-- Navbar Links -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto mb-2 mb-lg-0"> <!-- Use mx-auto to center the links -->
+            <ul class="navbar-nav mb-2 mb-lg-0"> <!-- Use mx-auto to center the links -->
                 <li class="nav-item">
                     <a class="nav-link active cta-button" aria-current="page" href="#">Home</a>
                 </li>
@@ -60,7 +60,7 @@
                     <a class="nav-link cta-button" href="#clients">Our Work</a>
                 </li>
             </ul>
-            <ul class="navbar-nav ml-auto mb-2 mb-lg-0"> <!-- Use ml-auto to push this ul to the right -->
+            <ul class="navbar-nav mb-2 mb-lg-0"> <!-- Use ml-auto to push this ul to the right -->
                 <li class="nav-item">
                     <a class="nav-link cta-button" href="" data-bs-toggle="modal" data-bs-target="#contactModal">Contact
                         Us</a>
